@@ -8,6 +8,7 @@
 - #1092: if 'failonerror' is set to false the 'svn' task will quit normally if there's no client adapter available
 - #1209: the 'wcVersion' command now adds a '.' to the prefix if it's missing
 - #1213: added the 'diffSummarize' command
+- #1079: improved handling of 'wcVersion' for unversioned pathes
 
 * 1.3.0
 - First version released by Joshua Frankamp
